# stock-data-pipeline

./: Dockerfile  README.md  app.py  collect_stock_data.py  db.py  display.py  docker-compose.yaml  pyproject.toml
app/: collect_stock_data.py  db.py  display.py
